[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/game/entities/player/weapons/SwordWeapon.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/player/sword.png" type="Texture" id=2]
[ext_resource path="res://assets/textures/fx/smearCut/Smear 01 Horizontal 1.png" type="Texture" id=3]
[ext_resource path="res://assets/textures/fx/smearCut/Smear 01 Vertical 01.png" type="Texture" id=4]
[ext_resource path="res://src/game/entities/projectiles/DistantCuts.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/game/entities/effects/SlashCutEffect.tscn" type="PackedScene" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.0
height = 8.0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("SwordPivot/SwordSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.5, -11 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SwordPivot/SwordSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SwordPivot/Fx:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ null ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SwordPivot/Fx:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SwordPivot/Fx:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 14, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("SwordPivot/Fx:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("SwordPivot:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("SwordPivot/CutArea:monitoring")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("SwordPivot/CutArea:monitorable")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("SwordPivot/SwordSprite:scale")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("SwordPivot/Fx:hframes")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("SwordPivot/Fx:visible")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("DashLine:visible")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("DashLine:default_color")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0.584314, 0.4, 0.827451 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "cut"
length = 0.2
step = 0.013
tracks/0/type = "value"
tracks/0/path = NodePath("SwordPivot/SwordSprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.065, 0.104, 0.156 ),
"transitions": PoolRealArray( 1, 1, 0.2, 1 ),
"update": 0,
"values": [ Vector2( 0.5, -11 ), Vector2( -2.5, -11 ), Vector2( -2.5, -11 ), Vector2( 4, 12 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SwordPivot/SwordSprite:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.065, 0.104, 0.156 ),
"transitions": PoolRealArray( 1, 1, 0.2, 1 ),
"update": 0,
"values": [ 0.0, -17.1, -17.1, 160.097 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SwordPivot/Fx:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.104 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ null, ExtResource( 3 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SwordPivot/Fx:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.104, 0.13, 0.156, 0.182, 0.195 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SwordPivot/Fx:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 14, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("SwordPivot/Fx:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.5, 1.5 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("SwordPivot/CutArea:monitoring")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.104, 0.195 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("SwordPivot/CutArea:monitorable")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.104, 0.195 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("SwordPivot/Fx:hframes")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0.104 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("SwordPivot/Fx:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/10/type = "method"
tracks/10/path = NodePath(".")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0.143 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_apply_cut_impulse"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "dash_cut"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("SwordPivot/SwordSprite:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1.0067e-05, 1 ),
"update": 0,
"values": [ 0.0, -43.7632, -90.0, -90.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SwordPivot/SwordSprite:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1e-05, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, -11 ), Vector2( -8, -9 ), Vector2( -12, 4.76837e-07 ), Vector2( -12, 4.76837e-07 ), Vector2( 10, 4.76837e-07 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SwordPivot/SwordSprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1, -1 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 2 ],
"method": "_attack_dash"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("DashLine:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.1, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("DashLine:default_color")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.1, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.584314, 0.4, 0 ), Color( 1, 0.584314, 0.4, 0.501961 ), Color( 1, 1, 1, 0.501961 ), Color( 1, 0.341176, 0.341176, 0.827451 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "far_cut"
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("SwordPivot/SwordSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.35, 0.45, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -11, -4 ), Vector2( -11, -4 ), Vector2( 10, -4 ), Vector2( 11, 3 ), Vector2( -11, 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SwordPivot/SwordSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.35, 0.45, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -74.3, -74.3, -108.924, -69.3418, -105.017 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SwordPivot/SwordSprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.35, 0.45, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1, -1 ), Vector2( 1, -1 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SwordPivot/Fx:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ null, ExtResource( 4 ), null ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SwordPivot/Fx:hframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("SwordPivot/Fx:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.3, 0.35, 0.4, 0.45, 0.5, 0.55 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("SwordPivot/Fx:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("SwordPivot/Fx:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 14, 0 ) ]
}
tracks/8/type = "method"
tracks/8/path = NodePath(".")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 1 ],
"method": "_attack"
} ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("SwordPivot/Fx:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 25, 26 )

[sub_resource type="Curve" id=7]
max_value = 2.0
_data = [ Vector2( 0, 1.47273 ), 0.0, 0.0, 0, 0, Vector2( 0.996212, 0.690909 ), 0.0, 0.0, 0, 0 ]

[node name="SwordWeapon" type="Node2D"]
script = ExtResource( 1 )
weapon_icon = ExtResource( 2 )
projectile_scenes = [ null, ExtResource( 5 ), ExtResource( 6 ) ]
cut_damage = 2
extra_impulse = 600.0
safety_shape = SubResource( 1 )
dash_damage = 4

[node name="AttacksAnim" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/cut = SubResource( 3 )
anims/dash_cut = SubResource( 5 )
anims/far_cut = SubResource( 4 )

[node name="SwordPivot" type="Node2D" parent="."]

[node name="SwordSprite" type="Sprite" parent="SwordPivot"]
position = Vector2( 0.5, -11 )
texture = ExtResource( 2 )

[node name="Fx" type="Sprite" parent="SwordPivot"]
visible = false
position = Vector2( 14, 0 )
texture = ExtResource( 3 )

[node name="CutArea" type="Area2D" parent="SwordPivot"]
collision_layer = 0
collision_mask = 12
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwordPivot/CutArea"]
position = Vector2( 25, 0 )
shape = SubResource( 6 )

[node name="DashRaycast" type="RayCast2D" parent="."]
collision_mask = 5

[node name="DashLine" type="Line2D" parent="."]
visible = false
z_index = 3
z_as_relative = false
points = PoolVector2Array( 2, -1, 99, -3 )
width = 1.0
width_curve = SubResource( 7 )
default_color = Color( 1, 0.584314, 0.4, 0.827451 )

[node name="LineRaycast" type="RayCast2D" parent="."]
unique_name_in_owner = true
enabled = true

[connection signal="animation_finished" from="AttacksAnim" to="." method="_on_AttacksAnim_animation_finished"]
[connection signal="body_entered" from="SwordPivot/CutArea" to="." method="_on_CutArea_body_entered"]
